PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/InvalidFunctionType.pf
module InvalidFunctionType {

    fun funWithInvalidType() : #FunctionCall {
        return something
    }
}